src/objects/Guided_Enablement__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Detail</label>
        <referenceTo>Agreement_Details__c</referenceTo>
        <relationshipLabel>Guided Enablement</relationshipLabel>
        <relationshipName>Guided_Enablement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <picklist>
            <controllingField>Program_Type__c</controllingField>
            <picklistValues>
                <fullName>Cintas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aramark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameripride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Linen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_File_URL__c</fullName>
        <label>External File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guided_Output__c</fullName>
        <label>Guided Output</label>
        <picklist>
            <picklistValues>
                <fullName>Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Say</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French-Canadian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mega_Segment__c</fullName>
        <label>Mega Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture/Mining/Oil/Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Department__c</fullName>
        <label>Owner Department</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rental</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Market Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_File_URL__c</fullName>
        <label>SFDC File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Present/Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install/Prep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Snippet_Content__c</fullName>
        <label>Snippet Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2_Digit_Industry__c</fullName>
        <label>2-Digit Industry</label>
        <picklist>
            <picklistValues>
                <fullName>01 Agricultural Crops</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02 Agricultural Production - Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 Agricultural Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Metal Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Coal Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 Oil and Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 Nonmetallic Minerals, Except Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 General Building Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 Heavy Construction, Exc. Building(Water/Sewer/Utilities)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 Special Trade Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Food and Kindred Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 Tobacco Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 Textile Mill Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23 Apparel and Other Textile Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 Lumber and Wood Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 Furniture and Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 Paper and Allied Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27 Printing and Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 Chemicals and Allied Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 Petroleum and Coal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Rubber and Misc Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 Leather and Leather Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32 Stone, Clay, and Glass Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33 Primary Metal Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34 Fabricated Metal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 Industrial Machinery and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Electronic &amp; Other Electric Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37 Transportation Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Guided Enablement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GE-{00000000}</displayFormat>
        <label>Guided Enablement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guided Enablement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>